# MarketShareGpu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpu_results_table_custom.csv  gpu_results_table_custom.csv  how_to_use.md  run_cpu_tests.sh  run_gpu_tests.sh
problem_instances_and_sols/: markshare_m_2_n_10_seed_0.prb  markshare_m_3_n_20_seed_1.prb  markshare_m_3_n_20_seed_1.sol  markshare_m_3_n_20_seed_2.prb  markshare_m_3_n_20_seed_2.sol  markshare_m_3_n_20_seed_2025.prb  markshare_m_3_n_20_seed_3.prb  markshare_m_3_n_20_seed_3.sol  markshare_m_3_n_20_seed_4.prb  markshare_m_3_n_20_seed_4.sol  markshare_m_3_n_20_seed_5.prb  markshare_m_3_n_20_seed_5.sol  markshare_m_4_n_30_seed_1.prb  markshare_m_4_n_30_seed_1.sol  markshare_m_4_n_30_seed_2.prb  markshare_m_4_n_30_seed_2.sol  markshare_m_4_n_30_seed_3.prb  markshare_m_4_n_30_seed_3.sol  markshare_m_4_n_30_seed_4.prb  markshare_m_4_n_30_seed_4.sol  markshare_m_4_n_30_seed_5.prb  markshare_m_4_n_30_seed_5.sol  markshare_m_5_n_40_seed_1.prb  markshare_m_5_n_40_seed_1.sol  markshare_m_5_n_40_seed_2.prb  markshare_m_5_n_40_seed_2.sol  markshare_m_5_n_40_seed_3.prb  markshare_m_5_n_40_seed_3.sol  markshare_m_5_n_40_seed_4.prb  markshare_m_5_n_40_seed_4.sol  markshare_m_5_n_40_seed_5.prb  markshare_m_5_n_40_seed_5.sol  markshare_m_6_n_50_seed_1.prb  markshare_m_6_n_50_seed_1.sol  markshare_m_6_n_50_seed_2.prb  markshare_m_6_n_50_seed_2.sol  markshare_m_6_n_50_seed_3.prb  markshare_m_6_n_50_seed_3.sol  markshare_m_6_n_50_seed_4.prb  markshare_m_6_n_50_seed_4.sol  (+23 more)
src/: cuda_kernels.cu  cuda_kernels.cuh  main.cpp  markshare.hpp  pairs_tuple.hpp  profiler.hpp
